test/corpus/expression.txt
================================================================================
Integer literals
================================================================================

int a = 128;
short a = 128i16;
ushort a = 128u16;
int b = 3_000_000;
long b = 3_000_000i64;
ulong b = 3_000_000u64;
uint c = 4_000u;
uint c = 4_000u32;
int c = 4_000i32;
long d = 0xC4_FF;
long d = 0xC4_FFi128;
ulong d = 0xC4_FFu128;
int e = 0o775_111;
int e = 0o775_111i16;
uint e = 0o775_111u16;
char f = 0b1001_1001;
ichar f = 0b1001_1001i8;
char f = 0b1001_1001u8;

---

(source_file
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal))
  (var_declaration (primitive_type) (identifier) (integer_literal)))


================================================================================
Float literals
================================================================================

float a = 1f;
float a = -2.22e21;
float a = -2.22e-21;
float a = -2.22e-21f;
float a = -2.22e-21f32;
half b = 1f16;
half b = 1f16;
half b = 1.0f16;
half b = 1.0e-10f16;
double c = -0x21.93p10;
double c = -0x21.93p10f64;
double c = -0x21.93p-10;
double c = -0x21.93p-10f64;
quad d = 1.0;
quad d = 1.0e;
quad d = 1.0e1;
quad d = 1.0e1f128;
quad d = 1.0E;

---

(source_file
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal))
  (var_declaration (primitive_type) (identifier) (float_literal)))

================================================================================
Boolean literals
================================================================================

bool a = true;
bool b = false;

---

(source_file
  (var_declaration (primitive_type) (identifier) (boolean_literal))
  (var_declaration (primitive_type) (identifier) (boolean_literal)))

================================================================================
Character literals
================================================================================

char a = 'a';
char b = '\0';
char c = '\t';
char d = '\'';
char e = 'b';
char f = 'c';
char g = '\xa1';
char h = '\x1A';
char i = '\u1A4F';
char j = '\U1A4F2D5B';

---

(source_file
  (var_declaration (primitive_type) (identifier) (char_literal))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal))
  (var_declaration (primitive_type) (identifier) (char_literal))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence)))
  (var_declaration (primitive_type) (identifier) (char_literal (escape_sequence))))

================================================================================
String literals
================================================================================

const char* a = "a";
char* b = "\"hi\"";
const char* c = "bonjour";
char* d = "guten morgen";
char* e = "buenos dias";
char* f = "buongiorno";
const char* g = `testing this ``now`` `;
const char* h = """
    <html>
      <body>
        <p>Hello World</p>
      </body>
    </html>
    """;
char* i = x"4865 6c6c 6f20 776f 726c 6421";
char* j = b64"Rk9PQkFSMTE=";

---

(source_file
  (const_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration
    (pointer_type (primitive_type))
    (identifier)
    (string_literal (escape_sequence) (escape_sequence)))
  (const_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (const_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (const_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration (pointer_type (primitive_type)) (identifier) (string_literal))
  (var_declaration (pointer_type (primitive_type)) (identifier) (string_literal)))

================================================================================
Assignment expressions
================================================================================

x = y;
x += 1;
x += y;
*s = &p;

---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (integer_literal)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (assignment_expression
      left: (unary_expression (identifier))
      right: (unary_expression (identifier)))))

================================================================================
Unary expressions
================================================================================

-a;
!b;
*c;
&d;
&&12;
&(*(&(e)));

---

(source_file
  (expression_statement
    (unary_expression
      (identifier)))
  (expression_statement
    (unary_expression
      (identifier)))
  (expression_statement
    (unary_expression
      (identifier)))
  (expression_statement
    (unary_expression
      (identifier)))
  (expression_statement
    (unary_expression
      (integer_literal)))
  (expression_statement
    (unary_expression
      (parenthesized_expression
        (unary_expression
          (parenthesized_expression
            (unary_expression
              (parenthesized_expression
                (identifier)))))))))

================================================================================
Binary expressions
================================================================================

a - a;
!b && c;
c || !b;
12 + 12;
100 * d;
2 * (10 + 4);
(2) * (10 + (4 << 2));

---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (binary_expression
      left: (unary_expression (identifier))
      right: (identifier)))
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (unary_expression (identifier))))
  (expression_statement
    (binary_expression
      left: (integer_literal)
      right: (integer_literal)))
  (expression_statement
    (binary_expression
      left: (integer_literal)
      right: (identifier)))
  (expression_statement
    (binary_expression
      left: (integer_literal)
      right: (parenthesized_expression
        (binary_expression
          left: (integer_literal)
          right: (integer_literal)))))
  (expression_statement
    (binary_expression
      left: (parenthesized_expression
        (integer_literal))
      right: (parenthesized_expression
        (binary_expression
          left: (integer_literal)
          right: (parenthesized_expression
            (binary_expression
              left: (integer_literal)
              right: (integer_literal))))))))

================================================================================
Range expressions
================================================================================

1..2;
3..;
..4;
..;

---

(source_file
  (expression_statement
    (range_expression
      (integer_literal)
      (integer_literal)))
  (expression_statement
    (range_expression
      (integer_literal)))
  (expression_statement
    (range_expression
      (integer_literal)))
  (expression_statement
    (range_expression)))

================================================================================
Subscript expressions
================================================================================

a[0];
b[..];
c[1..];
d[1..2];
e[a];

---

(source_file
  (expression_statement
    (subscript_expression
      (identifier)
      (integer_literal)))
  (expression_statement
    (subscript_expression
      (identifier)
      (range_expression)))
  (expression_statement
    (subscript_expression
      (identifier)
      (range_expression
        (integer_literal))))
  (expression_statement
    (subscript_expression
      (identifier)
      (range_expression
        (integer_literal)
        (integer_literal))))
  (expression_statement
    (subscript_expression
      (identifier)
      (identifier))))

================================================================================
Call expressions
================================================================================

a();
b(c, d);
e.f(g);
i.j.k();
l::m::n();
o::p();

---

(source_file
  (expression_statement
    (call_expression
      (identifier)
      (arguments)))
  (expression_statement
    (call_expression
      (identifier)
      (arguments
        (identifier)
        (identifier))))
  (expression_statement
    (call_expression
      (field_expression
        (identifier)
        (identifier))
      (arguments
        (identifier))))
  (expression_statement
    (call_expression
      (field_expression
        (field_expression
          (identifier)
          (identifier))
        (identifier))
      (arguments)))
  (expression_statement
    (call_expression
      (scoped_identifier
        (scoped_identifier
          (identifier)
          (identifier))
        (identifier))
      (arguments)))
  (expression_statement
    (call_expression
      (scoped_identifier
        (identifier)
        (identifier))
      (arguments))))

================================================================================
Field expressions
================================================================================

a.b;
*a.b;
&a.b;
a.b.c;
a.b.c.d;
a::b::c.d.e;
a::b::c.d.e();

---

(source_file
  (expression_statement
    (field_expression
      (identifier)
      (identifier)))
  (expression_statement
    (unary_expression
      (field_expression
        (identifier)
        (identifier))))
  (expression_statement
    (unary_expression
      (field_expression
        (identifier)
        (identifier))))
  (expression_statement
    (field_expression
      (field_expression
        (identifier)
        (identifier))
      (identifier)))
  (expression_statement
    (field_expression
      (field_expression
        (field_expression
          (identifier)
          (identifier))
        (identifier))
      (identifier)))
  (expression_statement
    (field_expression
      (field_expression
        (scoped_identifier
          (scoped_identifier
            (identifier)
            (identifier))
          (identifier))
        (identifier))
      (identifier)))
  (expression_statement
    (call_expression
      (field_expression
        (field_expression
          (scoped_identifier
            (scoped_identifier
              (identifier)
              (identifier))
            (identifier))
          (identifier))
      (identifier))
      (arguments))))

================================================================================
Try expressions
================================================================================

File*! res = findFile();
if (try res)
{
    printf("I found the file\n");
}

---

(source_file
  (var_declaration
    (failable_type
      (pointer_type
        (type_identifier)))
    (identifier)
    (call_expression
      (identifier)
      (arguments)))
  (if_statement
    (parenthesized_expression
      (try_expression
        (identifier)))
    (compound_statement
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string_literal
              (escape_sequence))))))))

================================================================================
Catch expressions
================================================================================

File*! res = findFile();
if (catch res)
{
    printf("An error occurred!\n");
}

---

(source_file
  (var_declaration
    (failable_type
      (pointer_type
        (type_identifier)))
    (identifier)
    (call_expression
      (identifier)
      (arguments)))
  (if_statement
    (parenthesized_expression
      (catch_expression
        (identifier)))
    (compound_statement
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string_literal
              (escape_sequence))))))))
